--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -1,3 +1,5 @@
+<app-spinner [active]="spinner"></app-spinner>
+
 <div class="bg-light min-vh-100 d-flex flex-row align-items-center">
   <c-container>
     <c-row class="justify-content-center">
@@ -7,7 +9,7 @@
             <c-card-body>
               <form cForm (ngSubmit)="login()">
                 <h1>Login</h1>
-                <p class="text-medium-emphasis">Sign In to your account</p>
+                <p class="text-medium-emphasis">¡Bienvenido de nuevo!</p>
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
@@ -35,7 +37,7 @@
                   </c-col>
                   <c-col class="text-right" xs="6">
                     <button cButton class="px-0" color="link">
-                      Forgot password?
+                      He olvidado mi contraseña
                     </button>
                   </c-col>
                 </c-row>
@@ -45,13 +47,13 @@
           <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
-                <h2>Sign up</h2>
+                <!-- TODO: traducir -->
+                <h2>¿Eres nuevo aquí?</h2>
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                  tempor incididunt ut labore et dolore magna aliqua.
+                  ¡Bienvenido/a a nuestra aplicación de presupuestos y salud financiera! Aquí podrás llevar un control de tus finanzas y mejorar tu situación económica. ¡Regístrate ahora y empieza a alcanzar tus objetivos financieros!
                 </p>
                 <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
-                  Register Now!
+                  ¡Registrarse!
                 </button>
               </div>
             </c-card-body>
