--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -8,36 +8,31 @@
           <c-card class="p-4">
             <c-card-body>
               <form cForm (ngSubmit)="login()">
-                <h1>Login</h1>
-                <p class="text-medium-emphasis">¡Bienvenido de nuevo!</p>
+                <h1>{{ 'login' | translate }}</h1>
+                <p class="text-medium-emphasis">{{ 'bienvenido' | translate }}</p>
                 <c-input-group class="mb-3">
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
                   </span>
-                  <input [(ngModel)]="email" name="email" autoComplete="email" cFormControl placeholder="usuario@gmail.com" />
+                  <input [(ngModel)]="email" name="email" autoComplete="email" cFormControl
+                    placeholder="usuario@gmail.com" />
                 </c-input-group>
                 <c-input-group class="mb-4">
                   <span cInputGroupText>
                     <svg cIcon name="cilLockLocked"></svg>
                   </span>
-                  <input
-                    [(ngModel)]="password"  
-                    name="password"
-                    autoComplete="contraseña"
-                    cFormControl
-                    placeholder="Contraseña"
-                    type="password"
-                  />
+                  <input [(ngModel)]="password" name="password" autoComplete="contraseña" cFormControl
+                    [placeholder]="'password' | translate" type="password" />
                 </c-input-group>
                 <c-row>
                   <c-col xs="6">
                     <button type="submit" cButton class="px-4" color="primary">
-                      Login
+                      {{ 'login' | translate }}
                     </button>
                   </c-col>
                   <c-col class="text-right" xs="6">
                     <button cButton class="px-0" color="link">
-                      He olvidado mi contraseña
+                      {{ 'heOlvidadoContraseña' | translate }}
                     </button>
                   </c-col>
                 </c-row>
@@ -47,13 +42,12 @@
           <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
-                <!-- TODO: traducir -->
-                <h2>¿Eres nuevo aquí?</h2>
+                <h2> {{ 'eresNuevoAqui' | translate }}</h2>
                 <p>
-                  ¡Bienvenido/a a nuestra aplicación de presupuestos y salud financiera! Aquí podrás llevar un control de tus finanzas y mejorar tu situación económica. ¡Regístrate ahora y empieza a alcanzar tus objetivos financieros!
+                  {{ 'mensajeDeBienvenida' | translate }}
                 </p>
                 <button [active]="true" cButton class="mt-3" color="primary" routerLink="/register">
-                  ¡Registrarse!
+                  {{ 'registrarse' | translate }}
                 </button>
               </div>
             </c-card-body>
