--- a/src/app/views/pages/register/register.component.html
+++ b/src/app/views/pages/register/register.component.html
@@ -7,35 +7,36 @@
         <c-card class="mx-4">
           <c-card-body class="p-4">
             <form cForm [formGroup]="form" (ngSubmit)="onSubmit()" novalidate>
-              <h1>Registro</h1>
-              <p class="text-medium-emphasis">Introduce los siguientes datos</p>
+              <h1>{{ 'registro' | translate }}</h1>
+              <p class="text-medium-emphasis">{{ 'introduceLosSiguientesDatos' | translate }}</p>
 
               <div class="mb-3">
                 <c-input-group>
                   <span cInputGroupText>
                     <svg cIcon name="cilUser"></svg>
                   </span>
-                  <input id="name" autoComplete="name" cFormControl placeholder="Nombre" formControlName="name"
-                    required /> <span class="text-danger fs-5 fw-bold ps-2">*</span>
+                  <input id="name" autoComplete="name" cFormControl [placeholder]="'nombre' | translate"
+                    formControlName="name" required /> <span class="text-danger fs-5 fw-bold ps-2">*</span>
                 </c-input-group>
 
                 <div class="small text-danger" *ngIf="f.name?.errors?.required && f.name?.touched">
-                  El nombre es obligatorio.
+                  {{ 'elNombreEsObligatorio' | translate }}
                 </div>
               </div>
 
               <div class="mb-3">
                 <c-input-group>
                   <span cInputGroupText>@</span>
-                  <input autoComplete="email" cFormControl placeholder="Correo electrónico:" id="email" type="email"
-                    formControlName="email" required /> <span class="text-danger fs-5 fw-bold ps-2">*</span>
+                  <input autoComplete="email" cFormControl [placeholder]="'correoElectronico' | translate" id="email"
+                    type="email" formControlName="email" required /> <span
+                    class="text-danger fs-5 fw-bold ps-2">*</span>
                 </c-input-group>
 
                 <div class="small text-danger" *ngIf="f.email?.errors?.required && f.email?.touched">
-                  El correo electrónico es obligatorio.
+                  {{ 'elCorreoElectronicoEsObligatorio' | translate }}
                 </div>
                 <div class="small text-danger" *ngIf="f.email?.errors?.email && f.email?.touched">
-                  El correo electrónico no es válido.
+                  {{ 'elCorreoElectronicoNoEsValido' | translate }}
                 </div>
               </div>
 
@@ -44,18 +45,19 @@
                   <span cInputGroupText>
                     <svg cIcon name="cilLockLocked"></svg>
                   </span>
-                  <input id="password" autoComplete="new-password" cFormControl placeholder="Contraseña" type="password"
-                    formControlName="password" required /> <span class="text-danger fs-5 fw-bold ps-2">*</span>
+                  <input id="password" autoComplete="new-password" cFormControl [placeholder]="'contraseña' | translate"
+                    type="password" formControlName="password" required /> <span
+                    class="text-danger fs-5 fw-bold ps-2">*</span>
                 </c-input-group>
 
                 <div class="small text-danger" *ngIf="f.password?.errors?.required && f.password?.touched">
-                  La contraseña es obligatoria.
+                  {{ 'laContraseñaEsObligatoria' | translate }}
                 </div>
                 <div class="small text-danger" *ngIf="f.password?.errors?.minLength && f.password?.touched">
-                  La contraseña debe tener al menos 8 caracteres.
+                  {{ 'laContraseñaDebeTenerAlMenos8Caracteres' | translate }}
                 </div>
                 <div class="small text-danger" *ngIf="f.password?.errors?.passwordStrength && f.password?.touched">
-                  La contraseña debe contener al menos una mayúscula y una minúscula.
+                  {{ 'laContraseñaDebeContenerAlMenosMayusculaYMinuscula' | translate }}
                 </div>
               </div>
 
@@ -64,37 +66,38 @@
                   <span cInputGroupText>
                     <svg cIcon name="cilLockLocked"></svg>
                   </span>
-                  <input autoComplete="new-password" cFormControl placeholder="Confirmar contraseña"
-                    id="confirmPassword" type="password" formControlName="confirmPassword" required /> <span
+                  <input autoComplete="new-password" cFormControl [placeholder]="'confirmarContraseña' | translate"
+                    id=" confirmPassword" type="password" formControlName="confirmPassword" required /> <span
                     class="text-danger fs-5 fw-bold ps-2">*</span>
                 </c-input-group>
 
                 <div class="small text-danger"
                   *ngIf="f.confirmPassword?.errors?.required && f.confirmPassword?.touched">
-                  La confirmación de contraseña es obligatoria.
+                  {{ 'confirmacionContraseñaObligatoria' | translate }}
                 </div>
                 <div class="small text-danger" *ngIf="form.hasError('passwordsMismatch') && f.confirmPassword?.touched">
-                  Las contraseñas no coinciden.
+                  {{ 'contraseñasNoCoinciden' | translate }}
                 </div>
               </div>
 
               <div class="col-5 mb-3">
                 <c-input-group>
-                  <input autoComplete="year-birth" cFormControl placeholder="Año de nacimiento" id="yearOfBirth"
+                  <input autoComplete="year-birth" cFormControl [placeholder]="'añoNacimiento' | translate" id="yearOfBirth"
                     type="number" formControlName="yearOfBirth" required /> <span
                     class="text-danger fs-5 fw-bold ps-2">*</span>
                 </c-input-group>
 
                 <div class="small text-danger" *ngIf="f.yearOfBirth?.errors?.required && f.yearOfBirth?.touched">
-                  El año de nacimiento es obligatorio.
+                  {{ 'añoNacimientoObligatorio' | translate }}
                 </div>
                 <div class="small text-danger" *ngIf="f.yearOfBirth?.errors?.yearOutOfRange && f.yearOfBirth?.touched">
-                  El año de nacimiento debe ser un año válido.
+                  {{ 'elAñoDebeSerValido' | translate }}
                 </div>
               </div>
 
               <div class="d-grid">
-                <button cButton type="submit" color="success" class="text-white">Crear cuenta</button>
+                <button cButton type="submit" color="success" class="text-white">{{ 'crearCuenta' | translate
+                  }}</button>
               </div>
             </form>
           </c-card-body>
