--- a/src/app/views/board/categories/components/categories.component.html
+++ b/src/app/views/board/categories/components/categories.component.html
@@ -135,7 +135,7 @@
                       style="min-width:200px">
                       {{ expense.name }}
                     </td>
-                    <td *ngIf="!modeSummary" class="text-center text-danger">
+                    <td *ngIf="!modeSummary" class="text-center small text-expense">
                       <ng-container *ngIf="expense.variable; else notVariable">
                         <i class="bi bi-reception-3"></i> {{ 'variable' | translate }}
                       </ng-container>
@@ -152,7 +152,7 @@
                         (created)="updateExpenseTags(expense.tags, $event)"></app-tags>
                     </td>
                     <td *ngIf="!modeSummary" class="text-center text-danger">
-                      <div [ngSwitch]="expense.relevance">
+                      <div [ngSwitch]="expense.relevance" class="small text-expense">
                         <div *ngSwitchCase="0"><i class="bi bi-chevron-double-down"></i> {{ 'muyBaja' | translate }}
                         </div>
                         <div *ngSwitchCase="1"><i class="bi bi-chevron-down"></i> {{ 'baja' | translate }}</div>
@@ -162,7 +162,7 @@
                         </div>
                       </div>
                     </td>
-                    <td *ngIf="!modeSummary" class="text-center text-danger">
+                    <td *ngIf="!modeSummary" class="text-center small text-expense">
                       <div [ngSwitch]="expense.period">
                         <div *ngSwitchCase="0">{{ 'mensual' | translate }}</div>
                         <div *ngSwitchCase="1">{{ 'cuatriMensual' | translate }}</div>
@@ -171,7 +171,7 @@
                       </div>
                     </td>
 
-                    <td class="text-center text-danger">
+                    <td class="text-center small text-danger">
                       {{ expense.amount }} €
                     </td>
 
