--- a/src/app/views/board/categories/components/categories.component.html
+++ b/src/app/views/board/categories/components/categories.component.html
@@ -4,8 +4,8 @@
   <div class="container-fluid">
     <div class="d-flex align-items-center container-flex-menu w-100">
       <div class="d-flex">
-        <input class="form-control form-control-sm me-2 input-search-categories" type="search" [(ngModel)]="search"
-          [placeholder]="'buscarNav' | translate" aria-label="Search">
+        <input class="d-none d-sm-block form-control form-control-sm me-2 input-search-categories" type="search"
+          [(ngModel)]="search" [placeholder]="'buscarNav' | translate" aria-label="Search">
 
         <app-view-categories [categories]="categories" class="me-2"></app-view-categories>
 
@@ -19,11 +19,11 @@
           <label class="form-check-label" for="viewModeSummary">{{ 'modoResumen' | translate }}</label>
         </div>
 
-        <div class="form-check form-check-inline ms-1">
+        <div class="d-none d-sm-block form-check form-check-inline ms-1">
           <input [(ngModel)]="viewIncomes" class="form-check-input" type="checkbox" id="viewIncomes">
           <label class="form-check-label" for="viewIncomes">{{ 'ingresos' | translate }}</label>
         </div>
-        <div class="form-check form-check-inline">
+        <div class="d-none d-sm-block form-check form-check-inline">
           <input [(ngModel)]="viewExpenses" class="form-check-input" type="checkbox" id="viewExpenses">
           <label class="form-check-label" for="viewExpensess">{{ 'gastos' | translate }}</label>
         </div>
@@ -229,7 +229,8 @@
 
         <button (click)="visibleSecondaryEstimates = !visibleSecondaryEstimates" type="button"
           class="btn btn-primary btn-sm btn-minimice">
-          <i class="bi" [ngClass]="{'bi-dash-lg':visibleSecondaryEstimates, 'bi-plus-lg':!visibleSecondaryEstimates}"></i>
+          <i class="bi"
+            [ngClass]="{'bi-dash-lg':visibleSecondaryEstimates, 'bi-plus-lg':!visibleSecondaryEstimates}"></i>
         </button>
       </div>
 
@@ -238,82 +239,5 @@
         <app-summary [period]="2" [categories]="categories"></app-summary>
       </ng-container>
     </ng-container>
-
-    <!-- <div class="card mb-2">
-      <div class="card-header d-flex align-items-center bg-success text-light">
-        <h6 class="text-secondary mb-0 text-light">
-          Estimación anual
-        </h6>
-        <i class="bi bi-calendar-check"></i>
-      </div>
-      <div class="card-body">
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total ingresos
-            <span class="badge bg-success rounded-pill">2100 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total gastos
-            <span class="badge bg-danger rounded-pill">1700 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Utilidad o Pérdida
-            <span class="badge bg-success rounded-pill">400 €</span>
-          </li>
-        </ul>
-      </div>
-    </div> -->
-
-    <!-- <div class="card mb-2">
-      <div class="card-header d-flex align-items-center bg-secondary text-light">
-        <h6 class="text-secondary mb-0 text-light">
-          Estimación cuatrimestral
-        </h6>
-        <i class="bi bi-calendar-check"></i>
-      </div>
-      <div class="card-body">
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total ingresos
-            <span class="badge bg-success rounded-pill">2100 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total gastos
-            <span class="badge bg-danger rounded-pill">1700 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Utilidad o Pérdida
-            <span class="badge bg-success rounded-pill">400 €</span>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="card mb-2">
-      <div class="card-header d-flex align-items-center bg-secondary text-light">
-        <h6 class="text-secondary mb-0 text-light">
-          Estimación semestral
-        </h6>
-        <i class="bi bi-calendar-check"></i>
-      </div>
-      <div class="card-body">
-        <ul class="list-group">
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total ingresos
-            <span class="badge bg-success rounded-pill">2100 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Total gastos
-            <span class="badge bg-danger rounded-pill">1700 €</span>
-          </li>
-          <li class="list-group-item d-flex justify-content-between align-items-center">
-            Utilidad o Pérdida
-            <span class="badge bg-success rounded-pill">400 €</span>
-          </li>
-        </ul>
-      </div>
-    </div> -->
   </div>
 </c-row>
-
-<pre>{{categories | json}}</pre>
