--- a/src/app/views/board/categories/components/summary/summary.component.scss
+++ b/src/app/views/board/categories/components/summary/summary.component.scss
@@ -1,3 +1,9 @@
 .category-title-summary{
     font-size:14px !important;
 }
+
+.list-group-item{
+    font-size: 14px;
+    padding: 6px 10px;
+    font-weight: 500;
+}
