--- a/src/app/views/boards/boards-management.component.html
+++ b/src/app/views/boards/boards-management.component.html
@@ -13,7 +13,7 @@
         <c-card-header>{{ 'misTableros' | translate }}</c-card-header>
         <c-card-body>
           <div class="row">
-            <div *ngFor="let board of boards" class="col-3 mb-3">
+            <div *ngFor="let board of boards" class="col-12 col-md-6 col-lg-3 mb-3">
               <c-card>
                 <app-spinner [active]="board.spinner"></app-spinner>
 
