--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -39,7 +39,7 @@
               </form>
             </c-card-body>
           </c-card>
-          <c-card [ngStyle]="{'width.%': 44}" class="text-white bg-primary py-5">
+          <c-card class="col-12 col-md text-white bg-primary py-5">
             <c-card-body class="text-center">
               <div>
                 <h2> {{ 'eresNuevoAqui' | translate }}</h2>
