--- a/src/app/views/board/categories/components/create-expense/create-expense.component.html
+++ b/src/app/views/board/categories/components/create-expense/create-expense.component.html
@@ -1,6 +1,6 @@
 <app-spinner [active]="spinner"></app-spinner>
 
-<button (click)="openModalCreate()" type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal">
+<button (click)="openModalCreate()" type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal">
   <ng-container *ngIf="!modeSummary" class="ms-1">
     <i class="bi bi-plus-lg me-1"></i> 
     <span >{{ 'addGasto' | translate }}</span>
