--- a/src/app/views/board/categories/components/summary/summary.component.html
+++ b/src/app/views/board/categories/components/summary/summary.component.html
@@ -22,7 +22,7 @@
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
         {{ 'totalGastos' | translate }}
-        <span class="badge bg-danger rounded-pill">
+        <span class="badge bg-primary rounded-pill">
           <i class="bi bi-arrow-down-short"></i>
           {{totalExpenses}} €
         </span>
