--- a/src/app/views/board/categories/components/update-expense/update-expense.component.html
+++ b/src/app/views/board/categories/components/update-expense/update-expense.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-link btn-edit btn-sm" aria-label="Cerrar" (click)="openModalUpdate()">
+<button type="button" class="btn btn-link btn-edit btn-sm position-relative" aria-label="Cerrar" (click)="openModalUpdate()" style="font-size: 12px; top:1px">
   <i class="bi bi-pencil"></i>
 </button>
 
