--- a/src/app/views/boards/boards-management.component.scss
+++ b/src/app/views/boards/boards-management.component.scss
@@ -40,3 +40,15 @@
     transform: rotate(360deg);
   }
 }
+
+.container-template{
+  background: #00000075;
+  border-radius: 4px;
+  padding: 10px 12px;
+  width:80%;
+}
+
+.btn-create-template{
+  position: absolute;
+  bottom: 13px;
+}
