--- a/src/app/views/board/categories/components/create/create-category.component.html
+++ b/src/app/views/board/categories/components/create/create-category.component.html
@@ -1,10 +1,9 @@
 <app-spinner [active]="spinner"></app-spinner>
 
-<button (click)="openModalCreate()" type="button" class="btn btn-success btn-sm" data-bs-toggle="modal">
+<button (click)="openModalCreate()" type="button" class="btn btn-success" data-bs-toggle="modal">
   <i class="bi bi-bookmark me-1"></i>
   {{ 'createCategory' | translate }}
 </button>
-
 
 <!-- Añadir nueva categoría -->
 <c-modal id="createModal" [visible]="visible" alignment="center" size="lg" (visibleChange)="handleCreateChange($event)">
