--- a/src/app/views/board/categories/components/update/update-category.component.html
+++ b/src/app/views/board/categories/components/update/update-category.component.html
@@ -1,4 +1,4 @@
-<button type="button" class="btn btn-link btn-edit btn-sm" aria-label="Cerrar" (click)="openModalUpdate()">
+<button type="button" class="btn btn-link btn-edit text-white btn-sm" aria-label="Cerrar" (click)="openModalUpdate()">
   <i class="bi bi-pencil"></i>
 </button>
 
