--- a/src/app/views/boards/components/create/create-board.component.html
+++ b/src/app/views/boards/components/create/create-board.component.html
@@ -1,9 +1,9 @@
 <app-spinner [active]="spinner"></app-spinner>
 
-<button (click)="openModalCreate()" type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal">
+<button (click)="openModalCreate()" type="button" class="btn btn-primary" data-bs-toggle="modal">
+  <i class="bi bi-clipboard-data"></i>
   {{ 'createBoard' | translate }}
 </button>
-
 
 <!-- Añadir nuevo board -->
 <c-modal id="createModal" [visible]="visible" alignment="center" size="lg" (visibleChange)="handleCreateChange($event)">
