--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -22,3 +22,12 @@
 .text-primary-2{
   color: #0149b5 !important
 }
+
+.logo-sf{
+  font-size: 29px;
+  font-family: math;
+  padding: 8px 17px;
+  background: #303c54;
+  color: white;
+  font-weight: 600;
+}
