--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -5,12 +5,29 @@
   id="sidebar"
   visible
 >
+
   <c-sidebar-brand
+  style="background-color: white;"
     [brandFull]="{
-      src: 'assets/img/brand/coreui-angular.svg',
+      src: 'assets/images/salud-financiera.png',
+      width: 150,      
+      alt: 'Salud financiera'
+    }"
+    [brandNarrow]="{
+      src: 'assets/images/salud-financiera.png',
+      width: 46,      
+      alt: 'Salud financiera'
+    }"
+    routerLink="./"
+  >
+  </c-sidebar-brand>
+
+  <!-- <c-sidebar-brand
+    [brandFull]="{
+      src: 'assets/images/salud-financiera.png',
       width: 200,
       height: 46,
-      alt: 'CoreUI Logo'
+      alt: 'Salud financiera'
     }"
     [brandNarrow]="{
       src: 'assets/img/brand/coreui-signet-white.svg',
@@ -20,7 +37,12 @@
     }"
     routerLink="./"
   >
-  </c-sidebar-brand>
+  </c-sidebar-brand> -->
+
+<div class="logo-sf">
+  <!-- Salud Financiera -->
+</div>
+
     <perfect-scrollbar [config]="perfectScrollbarConfig">
   <!--  [perfectScrollbar]="perfectScrollbarConfig"-->
   <c-sidebar-nav
