--- a/src/app/views/goals/goals.component.html
+++ b/src/app/views/goals/goals.component.html
@@ -6,8 +6,8 @@
             <c-card class="mb-4 position-relative">
                 <app-spinner [active]="spinnerGoals"></app-spinner>
 
-                <c-card-header>
-                    <h4 class="m-0 text-secondary">
+                <c-card-header class="bg-success">
+                    <h4 class="m-0 text-white">
                         {{ 'misObjetivos' | translate }}
                     </h4>
                 </c-card-header>
@@ -70,13 +70,7 @@
                                     </c-progress>
 
                                     <p class="alert alert-success mt-3 p-3" [innerHTML]="goal.message"
-                                        style="text-align: justify;"></p>
-
-                                    <button type="button" class="btn btn-success btn-sm float-end mt-1"
-                                        data-bs-toggle="modal">
-                                        <i class="bi bi-eye me-1"></i>
-                                        <span>Abrir</span>
-                                    </button>
+                                        style="text-align: justify;"></p>                                    
                                 </c-widget-stat-b>
                             </c-col>
                         </div>
