--- a/src/app/views/boards/boards-management.component.html
+++ b/src/app/views/boards/boards-management.component.html
@@ -61,7 +61,7 @@
                   </div>
 
                   <a cButton class="btn btn-create-template" color="success" cCol="7"
-                    (click)="createTemplate()">{{'crear'| translate}}</a>
+                    (click)="createTemplate(0)">{{'crear'| translate}}</a>
                 </div>
               </div>
             </div>
@@ -77,7 +77,7 @@
                   </div>
 
                   <a cButton class="btn btn-create-template" color="success" cCol="7"
-                    (click)="createTemplate()">{{'crear'| translate}}</a>
+                    (click)="createTemplate(1)">{{'crear'| translate}}</a>
                 </div>
               </div>
             </div>
