--- a/src/app/shared/components/spinner/spinner.component.scss
+++ b/src/app/shared/components/spinner/spinner.component.scss
@@ -4,11 +4,15 @@
   left: 0;
   bottom: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
-  z-index: 9999;
+  background-color: rgb(0 0 0 / 49%);
+    z-index: 9999;
 }
 
 .spinner-overlay .d-flex {
   height: 100%;
   width: 100%;
+}
+
+.spinner-border{
+  color: white !important;
 }
