feat:Actualizo paquete de idioma inglés

--- a/src/app/views/boards/boards-management.component.html
+++ b/src/app/views/boards/boards-management.component.html
@@ -72,7 +72,7 @@
                 <div class="card-img-overlay">
                   <div class="container-template">
                     <h5 class="card-title">{{ 'crearNuevoTemplateVacaciones' | translate }}</h5>
-                    <p class="card-text">{{ 'plantillaBasica' | translate }}</p>
+                    <p class="card-text">{{ 'plantillaBasicaVacaciones' | translate }}</p>
                     <!-- <p class="card-text">Last updated 3 mins ago</p> -->
                   </div>
 
